Add service account email as key

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ REGION=us-central1
 FMCSA_API_KEY=YOUR_FMCSA_KEY
 INTERNAL_API_KEY=YOUR_INTERNAL_API_KEY
 IMAGE_TAG=latest
+SERVICE_ACCOUNT_EMAIL=YOUR_SERVICE_ACCOUNT_EMAIL
