--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
-PROJECT_ID=YOUR_PROJECT_ID
+PROJECT_ID=your-gcp-project-id
 REGION=us-central1
 
-FMCSA_API_KEY=YOUR_FMCSA_KEY
-INTERNAL_API_KEY=YOUR_INTERNAL_API_KEY
+SERVICE_NAME=carrier-api
+SERVICE_ACCOUNT_EMAIL=carrier-api-deployer@your-gcp-project-id.iam.gserviceaccount.com
+
+FMCSA_API_KEY=replace-with-real-value
+INTERNAL_API_KEY=replace-with-real-value
+FMCSA_SECRET_NAME=fmcsa-api-key
+INTERNAL_SECRET_NAME=internal-api-key
+
 IMAGE_TAG=latest
-SERVICE_ACCOUNT_EMAIL=YOUR_SERVICE_ACCOUNT_EMAIL
