--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-is": "^19.0.0",
+    "react-simple-maps": "^3.0.0",
     "recharts": "^3.5.0"
   },
   "devDependencies": {
